change service content and images

--- a/src/App.css
+++ b/src/App.css
@@ -1318,6 +1318,10 @@ h6,
 .footer .footer-menu a:hover {
     color: var(--secondary);
 }
+.sales-ml{
+  margin-left: 25px;
+}
+
 .not-found-page {
     margin-top: 150px;
     color: white;
